# PhotonZip

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
bindings/python/: CMakeLists.txt  module.cpp
examples/MANS/: README.md  autotune_to_csv.py  compress_with_csv.py  cpu_multidim.py  cpu_roundtrip.py  cpu_roundtrip_autotune.py  cuda_device_input.py  cuda_host_input.py  h5z_mans_read.py  h5z_mans_write.py  nv_roundtrip.py
python/photonzip/: __init__.py  _native.pyi  codec_registry.py  codecs.py  mans.py  options.py  tensor.py
python/photonzip/codec/: __init__.py  mans.py
src/photonzip/codecs/mans/: mans_codec.cpp  mans_codec.hpp
src/photonzip/core/: codec_registry.cpp  codec_registry.hpp  codec_types.hpp  codec_value_utils.hpp  dlpack.h  errors.hpp
testdata/u2/pcg-gb/: pcg-gb_127x127x127_4096kB.u2  pcg-gb_127x127x127_4096kB.u2.json
testdata/u2/sfc-gi/: sfc-gi_127x127x127_4096kB.u2  sfc-gi_127x127x127_4096kB.u2.json
testdata/u2/sfc-l/: 3-pcg_127x127x127_4096kB.u2  3-pcg_127x127x127_4096kB.u2.json
testdata/u2/spdi-m/: spdi-m_127x127x127_4096kB.u2  spdi-m_127x127x127_4096kB.u2.json
tests/python/: test_codecs.py
