[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "photonzip"
version = "0.1.0"
description = "Python bindings for PhotonZip codecs"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "HPDPS Group" },
]
license = "BSD-3-Clause"
keywords = [
  "compression",
  "tensor",
  "dlpack",
  "cuda",
  "mans",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Archiving :: Compression",
]

[project.urls]
Homepage = "https://github.com/hpdps-group/PhotonZip"
Repository = "https://github.com/hpdps-group/PhotonZip"
Issues = "https://github.com/hpdps-group/PhotonZip/issues"

[tool.scikit-build]
cmake.source-dir = "."
wheel.packages = ["python/photonzip"]
